<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:src="@drawable/fondo_restaurante" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_restaurante"
            android:textColor="#FFFFFF"
            android:textSize="45dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_menu"
        android:textSize="45dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewHamburgesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/tv_hamburguesa"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tv_ver_mas"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/hamburguesa"

                    >

                </ImageView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/tv_pizza"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tv_ver_mas"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pizza"

                    >

                </ImageView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewSandwich"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/tv_sandwich"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tv_ver_mas"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/sandwich"

                    >

                </ImageView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>